# elf2uf2-rs

./: Cargo.toml  README.md
src/: elf.rs  main.rs
